[gd_scene load_steps=5 format=3 uid="uid://mokflplngt8k"]

[ext_resource type="Script" path="res://Scripts/Autentication.gd" id="1_q0oba"]
[ext_resource type="PackedScene" uid="uid://drfnqsugnf5r1" path="res://Scenes/parallax_background.tscn" id="2_ixfd3"]
[ext_resource type="Texture2D" uid="uid://bodv65atxm0i2" path="res://Sprites/nombreGame.png" id="2_yt52c"]
[ext_resource type="Texture2D" uid="uid://b6t2dwxtie3v5" path="res://Sprites/cerrar.png" id="3_o5j20"]

[node name="Autentication" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q0oba")
metadata/_edit_group_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -24.0
offset_right = 100.0
offset_bottom = 189.0
grow_horizontal = 2
grow_vertical = 2

[node name="EmailEdit" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Email"

[node name="PasswordEdit" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Password"
secret = true

[node name="LoginButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Acceder"

[node name="SignupButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Registrarse"

[node name="StateLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="Sprite2D" type="Sprite2D" parent="VBoxContainer"]
position = Vector2(103, -246)
scale = Vector2(1.00124, 1.04044)
texture = ExtResource("2_yt52c")

[node name="ParallaxBackground" parent="." instance=ExtResource("2_ixfd3")]

[node name="Close" type="Button" parent="."]
clip_contents = true
offset_left = 1823.0
offset_top = -7.0
offset_right = 3131.0
offset_bottom = 1301.0
scale = Vector2(0.08, 0.08)
size_flags_horizontal = 0
size_flags_vertical = 0
theme_type_variation = &"FlatButton"
icon = ExtResource("3_o5j20")

[connection signal="pressed" from="VBoxContainer/LoginButton" to="." method="_on_login_button_pressed"]
[connection signal="pressed" from="VBoxContainer/SignupButton" to="." method="_on_signup_button_pressed"]
[connection signal="pressed" from="Close" to="." method="_on_close_pressed"]
